Hamuberger menu not visible - Fix for active state of hamuberger menu not visible when short-name is used

--- a/src/less/corporate-ui/navigation.less
+++ b/src/less/corporate-ui/navigation.less
@@ -447,7 +447,7 @@
         display: block;
         float: left;
         margin: -18px 0 -19px -18px;
-        padding: 24px 17px;
+        padding: 23px 17px;
         border-radius: 0;
 
         &.collapsed {
